Update .gitignore to exclude .env files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@ node_modules/
 .DS_Store
 Thumbs.dbRequire all denied
 .vercel
+
+
+# 忽略API配置文件 (包含密码)
+api/config/config.php
+
+# 忽略 Vercel 和 Node.js 的本地文件
+.vercel
+node_modules/
+
+# 忽略所有环境配置文件
+.env
+.env.*
+# 如果你需要一个示例文件被追踪，可以使用下面的规则
+# !.env.example
+
+# 忽略 macOS 和 Windows 的系统文件
+.DS_Store
+Thumbs.db
